--- a/assn06/case2/mw_styles.css
+++ b/assn06/case2/mw_styles.css
@@ -23,7 +23,11 @@ body {
    font-family: 'Centry Gothic', sans-serif;
 }
 
-
+footer {
+   background-color: rgb(208, 184, 109);
+   padding-top: 5px;
+   padding-bottom: 5px;
+}
 
 /* Heading Styles */
 
