--- a/assn06/case2/mw_styles.css
+++ b/assn06/case2/mw_styles.css
@@ -45,7 +45,11 @@ h1, h2 {
 
 
 /* Navigation Styles */
-
+nav > ul {
+   list-style-type: none;
+   line-height: 2em;
+   font-size: 0.9em;
+}
 
 
 
