--- a/assn06/case2/mw_styles.css
+++ b/assn06/case2/mw_styles.css
@@ -51,6 +51,11 @@ nav > ul {
    font-size: 0.9em;
 }
 
+nav a:visited, nav a:link {
+   text-decoration: none;
+   color: rgb(13, 59, 125);
+}
+
 
 
 /* Article Styles */
