--- a/assn06/case2/mw_styles.css
+++ b/assn06/case2/mw_styles.css
@@ -64,6 +64,21 @@ nav a:hover, nav a:active {
 
 /* Article Styles */
 
+article#tour_summay h1 {
+   font-size: 2.2em;
+   letter-spacing: 0.2em;
+}
+
+article#tour_summary p {
+   font-size: 1.2em;
+}
+
+article#tour_summary > p:first-of-type::first-line {
+   font-variant: small-caps;
+   font-size: 1.2em;
+}
+
+
 
 
 
