--- a/assn06/case2/tutorial/pc_reset..css
+++ b/assn06/case2/tutorial/pc_reset..css
@@ -15,6 +15,11 @@
 
 /* Structural Styles */
 
+article, aside, figcaption, figure, 
+footer, header, main, nav, section {
+   display: block;
+}
+
 
 
 
