--- a/assn06/case2/tutorial/pc_reset..css
+++ b/assn06/case2/tutorial/pc_reset..css
@@ -33,3 +33,16 @@ li, main, nav, ol, p, section, span, ul {
    padding: 0;
    vertical-align: baseline;
 }
+
+nav ul {
+   list-style: none;
+   list-style-image: none;
+}
+
+nav a {
+   text-decoration: none;
+}
+
+body {
+   line-height: 1;
+}
