--- a/assn06/case2/tutorial/pc_home..css
+++ b/assn06/case2/tutorial/pc_home..css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Style Sheet for the Layout of the Pandaisia Chocolates Home Page
-   Author: 
-   Date:   
+   Author: Reginald Robinson
+   Date:   3 November 2021
    
    Filename: pc_home.css
 
