--- a/assn05/tutorial/pc_home.css
+++ b/assn05/tutorial/pc_home.css
@@ -15,11 +15,19 @@
 
 /* Body Styles */
 
+body {
+    max-width: 960px;
+    min-width: 640px;
+}
+
 
 
 /* Body Header Styles */
 
-
+body > header > img {
+    display: block;
+    width: 100%;
+}
 
 
 /* Horizontal Navigation Styles */
