--- a/assn006/tutorial/tutorial/pc_reset.css
+++ b/assn006/tutorial/tutorial/pc_reset.css
@@ -34,3 +34,15 @@ li, main, nav, ol, p, section, span, ul {
    vertical-align: baseline;
 }
 
+nav ul {
+    list-style: none;
+    list-style-image: none;
+}
+
+nav a {
+    text-decoration: none;
+}
+
+body {
+    line-height: 1;
+}
