--- a/assn006/tutorial/tutorial/pc_home.css
+++ b/assn006/tutorial/tutorial/pc_home.css
@@ -30,10 +30,17 @@ body > header > img {
     width: 100%;
 }
 
+body > header > nav.horizontalNavigation li {
+    width: 20;
+}
+
 
 /* Horizontal Navigation Styles */
 
-
+nav.horizontalNavigation li {
+    display: block;
+    width: 100%;
+}
 
 /* Left Column Styles */
 
