--- a/assn006/tutorial/tutorial/pc_home.css
+++ b/assn006/tutorial/tutorial/pc_home.css
@@ -31,7 +31,7 @@ body > header > img {
 }
 
 body > header > nav.horizontalNavigation li {
-    width: 20;
+    width: 20%;
 }
 
 
@@ -39,7 +39,7 @@ body > header > nav.horizontalNavigation li {
 
 nav.horizontalNavigation li {
     display: block;
-    width: 100%;
+    float: left;
 }
 
 /* Left Column Styles */
