--- a/assn006/tutorial/tutorial/pc_home.css
+++ b/assn006/tutorial/tutorial/pc_home.css
@@ -49,10 +49,31 @@ nav.horizontalNavigation a {
 }
 /* Left Column Styles */
 
+section#leftColumn {
+    clear: left;
+    float: left;
+    width: 33%;
+
+}
+
 
 
 
 /* Right Column Styles */
+
+section#rightColumn {
+    float: left;
+    width: 67%;
+}
+
+section#rightColumn {
+    display: block;
+    width: 100%;
+}
+
+section#rightColumn > nav.horizontalNavigation li {
+    width: 25%;
+}
 
 
 
