--- a/assn006/tutorial/tutorial/pc_home.css
+++ b/assn006/tutorial/tutorial/pc_home.css
@@ -39,12 +39,13 @@ body > header > nav.horizontalNavigation li {
 
 nav.horizontalNavigation li {
     display: block;
-    width: 100%;
+    float: left;
 }
 
 nav.horizontalNavigation a {
     display: block;
     text-align: center;
+}
     
 }
 /* Left Column Styles */
@@ -55,8 +56,6 @@ section#leftColumn {
     width: 33%;
 
 }
-
-
 
 
 /* Right Column Styles */
