--- a/assn006/tutorial/tutorial/pc_home.css
+++ b/assn006/tutorial/tutorial/pc_home.css
@@ -75,8 +75,18 @@ section#rightColumn > nav.horizontalNavigation li {
 }
 
 
-
-
-
 /* Footer Styles */
 
+footer {
+    clear: left;
+}
+
+footer > nav.verticalNavigation {
+    float: left;
+    width: 22%;
+}
+
+footer > section#contactinfo {
+    float: left;
+    width: 34%;
+}
