--- a/assn006/tutorial/tutorial/pc_home.css
+++ b/assn006/tutorial/tutorial/pc_home.css
@@ -78,6 +78,7 @@ section#rightColumn > nav.horizontalNavigation li {
 /* Footer Styles */
 
 footer {
+    background-color: rgb(71, 52, 29);
     clear: left;
 }
 
@@ -89,5 +90,11 @@ footer > nav.horizontalNavigation {
 footer > section#contactInfo {
     float: left;
     width: 34%;
+}
+
+footer::after {
+    clear: both;
+    content: "";
+    display: table;
 }
 
