--- a/assn006/tutorial/tutorial/pc_info.css
+++ b/assn006/tutorial/tutorial/pc_info.css
@@ -15,8 +15,9 @@ div.infobox {display:none;}
 /* Main Styles */
 
 main {
+    overflow: auto;
     position: relative;
-    height: 1400px;
+    height: 450px;
     width: 100%;
 }
 
