--- a/assn06/assn06-Rework-ph/tutorial/pc_home.css
+++ b/assn06/assn06-Rework-ph/tutorial/pc_home.css
@@ -15,9 +15,22 @@
 
 /* Body Styles */
 
+body {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 960px;
+    min-width: 640px;
+    width: 95%;
+}
+
 
 
 /* Body Header Styles */
+
+body > header > img {
+    display: block;
+    width: 100%;
+}
 
 
 
