--- a/assn06/assn06-Rework-ph/tutorial/pc_reset.css
+++ b/assn06/assn06-Rework-ph/tutorial/pc_reset.css
@@ -31,6 +31,9 @@ li, main, nav, ol, p, section, span, ul {
     font-size: 100%;
     margin: 0%;
     vertical-align: baseline;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 nav {
