--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -15,7 +15,18 @@
 
 /* Window and Body Styles */
 
+html {
+    height: 100;
+}
 
+body {
+    width: 95%;
+    min-width: 640px;
+    max-width: 960px;
+    margin-right: auto;
+    margin-left: auto;
+    min-height: 100%;
+}
 
 
 /* Row Styles */
