--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -28,7 +28,9 @@ body {
     min-height: 100%;
 }
 
-    height: 100%;
+header, ul, nav, li, a {
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
 }
 
 
