--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -44,10 +44,13 @@ grid-row::after {
 }
 
 
-
-
-
 /* Page Header Styles */
+
+body > header > img {
+   display: block;
+   width: 70%;
+   float: left;
+}
 
 
 
