--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -73,9 +73,15 @@ nav.horizontal li {
 }
 
 
-
-
 /* Topics Styles */
+
+ul#topics li {
+   display: block;
+   width: 20%;
+   float: left;
+   margin-left: 0%;
+   margin-right: 1.5%;
+}
 
 
 
