--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -91,7 +91,11 @@ ul#topics li:last-of-type {
    margin-left: 7.75%;
 }
 
-
+ul#topics li img {
+   display: block;
+   width: 50%;
+   margin: 0 auto;
+}
 
 
 /* HR Styles */
