--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -109,6 +109,14 @@ hr {
 
 /* Customer Comment Styles */
 
+ul#comments {
+   width: 75%;
+   margin-top: 40px;
+   margin-bottom: 40px;
+   margin-left: auto;
+   margin-right: auto;
+}
+
 
 
 /* Footer Styles */
