--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -117,7 +117,12 @@ ul#comments {
    margin-right: auto;
 }
 
-
+ul#comments li {
+   display: block;
+   width: 50%;
+   float: left;
+   margin-bottom: 30px;
+}
 
 /* Footer Styles */
 
