--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -124,6 +124,13 @@ ul#comments li {
    margin-bottom: 30px;
 }
 
+ul#comments li img {
+   display: block;
+   width: 20%;
+   float: left;
+   margin-left: 5%;
+   margin-right: 5%;
+}
 /* Footer Styles */
 
 
