--- a/assn07/case1/ce_grids.css
+++ b/assn07/case1/ce_grids.css
@@ -28,8 +28,55 @@ div.row {
 
 /* Grid Columns Styles */
 
+div.column100 {
+    width: 100%;
+    float: left;
+}
 
+div.column50 {
+    width: 50%;
+    float: left;
+}
 
+div.column33 {
+    width: 33.33%;
+    float: left;
+}
+
+div.column67 {
+    width: 66.67%;
+    float: left;
+}
+
+div.column25 {
+    width: 25%;
+    float: left;
+}
+
+div.column75 {
+    width: 75%;
+    float: left;
+}
+
+div.column20 {
+    width: 20%;
+    float: left;
+}
+
+div.column40 {
+    width: 40%;
+    float: left;
+}
+
+div.column60 {
+    width: 60%;
+    float: left;
+}
+
+div.column80 {
+    width: 80%;
+    float: left;
+}
 
 /* Grid Spacing Styles */
 
