--- a/assn07/case1/ce_grids.css
+++ b/assn07/case1/ce_grids.css
@@ -80,3 +80,9 @@ div.column80 {
 
 /* Grid Spacing Styles */
 
+.container, .row, div.column, div.cell, div.a {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
