--- a/assn07/case1/ce_styles.css
+++ b/assn07/case1/ce_styles.css
@@ -18,6 +18,18 @@ html {
     background-color: rgb(101, 101, 101);
 }
 
+body {
+    position: relative;
+    background: white;
+    font-family: Verdana, Geneva, Arial, sans-serif;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 95%;
+    min-width: 320px;
+    max-width: 960px;
+}
 /* Body Header Styles */
 
 
