--- a/assn07/case1/ce_styles.css
+++ b/assn07/case1/ce_styles.css
@@ -30,6 +30,11 @@ body {
     min-width: 320px;
     max-width: 960px;
 }
+
+body img {
+    display: block;
+    width: 100%
+}
 /* Body Header Styles */
 
 
