--- a/assn07/case2/ce_styles.css
+++ b/assn07/case2/ce_styles.css
@@ -47,7 +47,15 @@ body > header {
     height: 40px;
 }
 
-
+body > header > nav un li {
+    display: block;
+    float: left;
+    margin-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
 
 /* DIV Container Styles */
 
