--- a/assn07/case2/ce_styles.css
+++ b/assn07/case2/ce_styles.css
@@ -57,6 +57,20 @@ body > header > nav un li {
     padding-right: 0px;
 }
 
+body > header > nav ul li {
+    font-size: 0.9em;
+    color: rgb(51, 51, 51);
+}
+
+nav a:link, nav a:visted {
+    color: rgb(51, 51, 51);
+}
+
+nav a:hover, nav a active {
+    color: rgb(255, 211, 211);
+}
+
+
 /* DIV Container Styles */
 
 
