--- a/assn07/case2/ce_styles.css
+++ b/assn07/case2/ce_styles.css
@@ -73,6 +73,10 @@ nav a:hover, nav a active {
 
 /* DIV Container Styles */
 
+div#container {
+    padding-right: 8px;
+    padding-left: 8px;
+}
 
 
 /* Footer Styles */
