--- a/assn07/case2/ce_styles.css
+++ b/assn07/case2/ce_styles.css
@@ -62,11 +62,11 @@ body > header > nav ul li {
     color: rgb(51, 51, 51);
 }
 
-nav a:link, nav a:visted {
+nav a:link, nav a:visited {
     color: rgb(51, 51, 51);
 }
 
-nav a:hover, nav a active {
+nav a:hover, nav a:active {
     color: rgb(255, 211, 211);
 }
 
@@ -78,5 +78,11 @@ div#container {
     padding-left: 8px;
 }
 
+div[class^="cell"]>a {
+    display: block;
+    width: 100%;
+    padding-left: 8px;
+    padding-right: 8px;
+}
 
 /* Footer Styles */
