--- a/assn07/case2/ce_styles.css
+++ b/assn07/case2/ce_styles.css
@@ -86,3 +86,13 @@ div[class^="cell"]>a {
 }
 
 /* Footer Styles */
+
+footer {
+    position: absolute;
+    right: 8px;
+    bottom: 8px;
+    color: rgb(143, 33, 36);
+    text-align: right;
+    font-size: 2vmin;
+
+}
