--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -16,7 +16,23 @@
 
 /* Figure Box Styles */
 
+figure {
+   margin: 20px auto 0px;
+   width: 80%;
+}
 
+figure img {
+   display: block;
+   width: 100%;
+}
+
+figure figcaption {
+   background-color: white;
+   font-family: 'Palatino Linotype', Palatino, 'Times New Roman', serif;  
+   font-style: italic;
+   padding: 10px 0;
+   text-align: center;
+}
 
 
 /* HTML Styles */
