--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -37,10 +37,18 @@ figure figcaption {
 
 /* HTML Styles */
 
+html {
+   background-image: url(tb_back1.png);
+}
+
 
 
 
 /* Article Styles */
+
+article {
+   background: url(tb_back2.png) bottom right / 15% no-repeat content-box;
+}
 
 
 
