--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -59,12 +59,18 @@ article {
 
 /* Page Body Styles */
 
+body {
+   border-left: 1px solid rgb(51, 51, 51);
+   border-right: 1px solid rgb(51, 51, 51);
+}
 
 
 
 /* Aside Styles */
 
-
+aside {
+   border: 4px double rgb(45, 93, 62);
+}
 
 /* Footer Styles */
 
