--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -17,6 +17,9 @@
 /* Figure Box Styles */
 
 figure {
+   border-style: solid;
+   border-width: 25px;
+   border-image: url(tb_border.png) 50 repeat;
    margin: 20px auto 0px;
    width: 80%;
 }
@@ -70,6 +73,7 @@ body {
 
 aside {
    border: 4px double rgb(45, 93, 62);
+   border-radius: 30px;
 }
 
 /* Footer Styles */
