--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -54,6 +54,8 @@ article {
    url(tb_back3.png) bottom left / 15% no-repeat content-box,
    url(tb_back4.png) 100% / cover no-repeat,
    rgb(211, 211, 211);
+   box-shadow: inset rgb(71, 71, 71) -10px -10px 25px,
+               inset rgb(71, 71, 71) 10px 10px 25px;
 
 }
 
@@ -80,7 +82,10 @@ body {
 aside {
    border: 4px double rgb(45, 93, 62);
    border-radius: 30px;
+   box-shadow: rgba(51, 51, 51, 0.4) 0px 0px 20px 10px;
 }
+
+
 
 /* Footer Styles */
 
