--- a/assn08/tutorial/tb_visual2.css
+++ b/assn08/tutorial/tb_visual2.css
@@ -16,7 +16,26 @@
 
 /* Transformation Styles */
 
+article {
+    perspective: 600px;
+}
 
+figure#figure1 {
+    transform: rotate(30deg) translate(50px);
+    box-shadow: rgb(51, 51, 51) 0px 10px 25px;
+}
+
+figure#figure2 {
+    transform: rotate(-46deg) scale(0.8, 0.8) translate(20px, -100px),
+               rotateZ(30deg) rotateY(60deg);               
+    box-shadow: rgb(101, 101, 101) 10px 10px 25px;
+}
+
+figure#figure3 {
+    transform: rotate(10deg) scale(0.9, 0.9) translate(-20px),
+            rotateY(-70deg) translateZ(-20px);
+    box-shadow: rgb(101, 101, 101) 10px -10px 25px;
+}
 
 /* Filter Styles */
 
