--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -15,6 +15,11 @@
 
 /* Body Header Styles */
 
+body {
+    box-shadow: 10px 0px 50px rgb(51, 51, 51),
+            -10px 0px 50px rgb(51, 51, 51);
+}
+
 
 
 /* Navigation Tabs List Styles */
