--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -24,6 +24,12 @@ body {
 
 /* Navigation Tabs List Styles */
 
+body > header nav.tabs {
+    background-image: url(sf_back1.png) no repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
 
 
 
