--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -30,7 +30,9 @@ body > header nav.tabs {
     background-size: cover;
 }
 
-
+body > header li {
+    transform: perspective(50px) rotateX(20deg);
+}
 
 
 /* Left Section Styles */
