--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -34,6 +34,10 @@ body > header li {
     transform: perspective(50px) rotateX(20deg);
 }
 
+body > header nav.tabs li:hover {
+    background-color: rgb(231, 231, 231);
+}
+
 
 /* Left Section Styles */
 
