--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -41,6 +41,11 @@ body > header nav.tabs li:hover {
 
 /* Left Section Styles */
 
+section#left nav.vertical {
+    border: 1px solid rgb(20, 167, 170);
+    border-radius: 25px;
+}
+
 
 
 
