--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -46,6 +46,9 @@ section#left nav.vertical {
     border-radius: 25px;
 }
 
+section#left nav.vertical h1 {
+    border-radius: 25px 25px 0 0;
+}
 
 
 
