--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -66,4 +66,11 @@ section#center article {
 
 /* Blockquote Styles */
 
+blockquote {
+    background: url(sf_speech.png) no-repeat;
+    background-size: 100% 100%;
+    --webkit-filter: drop-shadow(5px 5px 10px rgb(51, 51, 51));
+    filter: drop-shadow(5 px 5px 10px rgb(51, 51, 51));
+}
+
 
