--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -29,6 +29,7 @@ body {
 }
 
 header, ul, nav, li, a {
+   box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
 }
