--- a/assn07/case2/ce_styles.css
+++ b/assn07/case2/ce_styles.css
@@ -20,18 +20,19 @@ html {
 
 body {
     position: relative;
-    background: white;
+    background-color: white; /* changed to background-color*/
     font-family: Verdana, Geneva, Arial, sans-serif;
-    margin-top: 20px;
+    /*margin-top: 20px;
     margin-bottom: 20px;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto;--simplified to margin: 20px auto; */
+    margin: 20px auto;
     width: 95%;
     min-width: 320px;
     max-width: 960px;
 }
 
-body img {
+img { /* just body here*/
     display: block;
     width: 100%
 }
@@ -43,30 +44,27 @@ nav a {
 /* Body Header Styles */
 
 body > header {
-    background-color: rgb(191, 68, 70);
+    background-color: rgb(191, 168, 170);
     height: 40px;
 }
 
-body > header > nav un li {
+body > header > nav >ul > li {/*missing some here*/
     display: block;
     float: left;
     margin-right: 20px;
-    padding-top: 10px;
+    /*padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 0px;
-    padding-right: 0px;
+    padding-right: 0px;---redone to padding: 10px 0px; */
+    padding: 10px 0px;
 }
 
-body > header > nav ul li {
+body > header > nav a:visited, body > header > nav a:link  {/*added some here*/
     font-size: 0.9em;
     color: rgb(51, 51, 51);
 }
 
-nav a:link, nav a:visited {
-    color: rgb(51, 51, 51);
-}
-
-nav a:hover, nav a:active {
+body > header > nav a:hover, body > header > nav a:active /*added some here*/ {
     color: rgb(255, 211, 211);
 }
 
@@ -75,10 +73,10 @@ nav a:hover, nav a:active {
 
 div#container {
     padding-right: 8px;
-    padding-left: 8px;
+    padding-bottom: 8px;/*changed to bottom*/
 }
 
-div[class^="cell"]>a {
+div.cell a  {/*simplified*/
     display: block;
     width: 100%;
     padding-left: 8px;
