--- a/assn08/tutorial/tb_visual2.css
+++ b/assn08/tutorial/tb_visual2.css
@@ -20,8 +20,8 @@ article {
     perspective: 600px;
 }
 
-figure#figure1 {
-    transform: rotate(30deg) translate(50px);
+figure#figure1 { 
+    transform: rotate(30deg) translateZ(50px);/* added Z*/
     box-shadow: rgb(51, 51, 51) 0px 10px 25px;
 }
 
@@ -32,7 +32,7 @@ figure#figure2 {
 }
 
 figure#figure3 {
-    transform: rotate(10deg) scale(0.9, 0.9) translate(-20px),
+    transform: rotate(10deg) scale(0.9, 0.9) translateY(-120px), /*added Y and 1 (-120px)*/
             rotateY(-70deg) translateZ(-20px);
     box-shadow: rgb(101, 101, 101) 10px -10px 25px;
 }
