--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Visual Style Sheet for Tree and Book Family Home Page
-   Author: Reginald Robinson
-   Date:   19 November 2021
+   Author: Kevin Whitmore
+   Date:   2017-03-01
    
    Filename: tb_visual1.css
 
@@ -32,7 +32,7 @@ figure img {
 
 figure figcaption {
    background-color: white;
-   font-family: 'Palatino Linotype', Palatino, 'Times New Roman', serif;  
+   font-family: 'Palatino Linotype', Palatino, 'Times New Roman', serif;
    font-style: italic;
    padding: 10px 0;
    text-align: center;
@@ -45,27 +45,21 @@ html {
    background-image: url(tb_back1.png);
 }
 
-
-
-
 /* Article Styles */
 
 article {
    background: url(tb_back2.png) bottom right / 15% no-repeat content-box,
-   url(tb_back3.png) bottom left / 15% no-repeat content-box,
-   url(tb_back4.png) 100% / cover no-repeat,
-   rgb(211, 211, 211);
+               url(tb_back3.png) bottom left / 15% no-repeat content-box,
+               url(tb_back4.png) 100% / cover no-repeat,
+               rgb(211, 211, 211);
    box-shadow: inset rgb(71, 71, 71) -10px -10px 25px,
-      inset rgb(71, 71, 71) 10px 10px 25px;
-
+               inset rgb(71, 71, 71) 10px 10px 25px;               
 }
 
 article header h1 {
    text-shadow: rgb(181, 211, 181) 2px 2px 1px,
-     rgba(21, 21, 21 0.66) 5px 5px 25px;
+                rgba(21, 21, 21, 0.66) 5px 5px 25px;
 } 
-
-
 
 /* Page Body Styles */
 
@@ -77,14 +71,13 @@ body {
 }
 
 
-
 /* Aside Styles */
 
 aside {
    background: radial-gradient(white, rgb(151, 222, 151), rgb(81, 125, 81));
    border: 4px double rgb(45, 93, 62);
    border-radius: 30px;
-   box-shadow: rgba(51, 51, 51, 0.4) 0px 0px 20px 10px;
+   box-shadow: rgba(51, 91, 51, 0.4) 0px 0px 20px 10px;   
 }
 
 
@@ -94,5 +87,3 @@ aside {
 footer {
    background: linear-gradient(345deg, rgb(172, 232, 172), rgb(21, 35, 21) 80%);
 }
-
-
