--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -14,6 +14,8 @@
 */
 
 /* Body Header Styles */
+/*your code----
+
 
 body {
     box-shadow: 10px 0px 50px rgb(51, 51, 51),
@@ -22,7 +24,7 @@ body {
 
 
 
-/* Navigation Tabs List Styles */
+/* Navigation Tabs List Styles 
 
 body > header nav.tabs {
     background-image: url(sf_back1.png) no repeat;
@@ -39,7 +41,7 @@ body > header nav.tabs li:hover {
 }
 
 
-/* Left Section Styles */
+/* Left Section Styles 
 
 section#left nav.vertical {
     border: 1px solid rgb(20, 167, 170);
@@ -53,7 +55,7 @@ section#left nav.vertical h1 {
 
 
 
-/* Center Article Styles */
+/* Center Article Styles 
 
 section#center article {
     background: radial-gradient(white 30%, rgb(151, 151, 151));
@@ -64,7 +66,7 @@ section#center article {
 }
 
 
-/* Blockquote Styles */
+/* Blockquote Styles 
 
 blockquote {
     background: url(sf_speech.png) no-repeat;
@@ -76,4 +78,60 @@ blockquote {
 
 cite img {
     border-radius: 50%;
-}
+}*/
+/* The correct code */
+/* Body Header Styles */
+
+body {
+    box-shadow: 10px 0px 50px rgb(51, 51, 51),  -10px 0px 50px rgb(51, 51, 51);
+ }
+ 
+ /* Navigation Tabs List Styles */
+ 
+ body > header nav.tabs {
+    background: url(sf_back1.png) no-repeat;
+    background-position: center center;
+    background-size: cover;
+ }
+ 
+ body > header nav.tabs li {
+    transform: perspective(50px) rotateX(20deg);
+ }
+ 
+ 
+ body > header nav.tabs li:hover {
+    background-color: rgb(231, 231, 231);
+ }
+ 
+ /* Left Section Styles */
+ 
+ section#left nav.vertical {
+    border: 1px solid rgb(20, 167, 170);
+    border-radius: 25px;
+ }
+ 
+ section#left nav.vertical h1 {
+    border-radius: 25px 25px 0px 0px;
+ }
+ 
+ /* Center Article Styles */
+ 
+ section#center article {
+    background: radial-gradient(white 30%, rgb(151, 151, 151));
+    border: 1px solid rgb(151, 151, 151);
+    border-radius: 50px;
+    box-shadow: 10px 10px 20px rgb(51, 51, 51);
+ }
+ 
+ /* Blockquote Styles */
+ 
+ blockquote {
+    background: url(sf_speech.png) no-repeat;
+    background-size: 100% 100%;
+    -webkit-filter: drop-shadow(5px 5px 10px rgb(51, 51, 51));
+    filter: drop-shadow(5px 5px 10px rgb(51, 51, 51));
+ }
+ 
+ cite img {
+    border-radius: 50%;
+ }
