--- a/assn09/html05_tutorial/tutorial/tf_styles1.css
+++ b/assn09/html05_tutorial/tutorial/tf_styles1.css
@@ -145,6 +145,14 @@ body > footer {
 
 /* Pulldown Menu Styles */
 
+ul.submenu {
+   display: none;
+}
+
+a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
+   display: block;
+}
+
 
 
 
@@ -171,7 +179,7 @@ body > footer {
   ==================================
 */
 @media only screen and (min-width: 769px) {
-   
+
 }
 
 
