--- a/assn08/tutorial/tf_flex.css
+++ b/assn08/tutorial/tf_flex.css
@@ -43,6 +43,18 @@ section#main {
     flex: 3 1 361px;
 }
 
+section#topics {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+}
+
+section#topics article {
+    -webkit-flex: 1 1 200px;
+    flex: 1 1 200px;
+}
+
 
 
 
@@ -53,7 +65,15 @@ section#main {
 
 @media only screen and (max-width: 480px) {
   
+aside {
+    -webkit-order: 99;
+    order: 99;
+}
 
+footer {
+    -webkit-order: 100;
+    order: 100;
+}
  
 }
 
@@ -63,6 +83,18 @@ section#main {
 */
 
 @media only screen and (min-width: 481px) {
+
+    nav.horizontal ul {
+        display: -webkit-flex;
+        display: flex;
+        -webkit-flex-flow: row nowrap;
+        flex-flow: row nowrap;
+    }
+
+    nav.horizontal li {
+        -webkit-flex: 1 1 auot;
+        flex: 1 1 auto;
+    }
 
 
 
